<resources>
    <string name="app_name">Cook It</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Log out</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_recipes">My Recipes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="donthaveanaccount"><u>Don\'t have an account? Sign Up</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_in">Sing In</string>
    <string name="sign_up">Sign Up</string>
    <string name="make_recipe">Make recipe</string>
    <string name="title_activity_add_steps">AddStepsActivity</string>
    <string name="add_steps">Add steps</string>
    <string name="add_step">Add step</string>
    <string name="add_timer">Add timer</string>
    <string name="minutes">Minutes</string>
    <string name="recipe">Recipe</string>
    <string name="short_description">Short description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">or</string>
    <string name="startCooking">Start cooking</string>
    <string name="ingredients">Ingredients</string>
    <string name="nextStep">Next step</string>
    <string name="byIngredients">By ingredients</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="salads">Salads</string>
    <string name="soups">Soups</string>
    <string name="pizza">Pizza</string>
    <string name="pasta">Pasta</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="fruit">Fruit</string>
    <string name="sushi">Sushi</string>
    <string name="other">Other...</string>
    <string name="cooking">Cooking</string>
    <string name="finish">Finish</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="selectImage">Select Image</string>
    <string name="setRecipeName">Set recipe name</string>
    <string name="addIngredients">Add ingredients</string>
    <string name="writeShortDescription">Write short description</string>
    <string name="errorTryAgain">Error: try again</string>
    <string name="savingNewRecipe">Saving new recipe</string>
    <string name="pleaseWait">Please wait</string>
    <string name="saved">Saved!</string>
    <string name="error">"Error: "</string>
    <string name="addSomeSteps">Add some steps to recipe...</string>
    <string name="passwordRestore">Password restore</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="send">Send</string>
    <string name="checkyourEmail">Check your email please</string>
    <string name="cancel">Cancel</string>
    <string name="logginingIn">Loggining in</string>
    <string name="youAreLoggedIn">You are logged in</string>
    <string name="connectionToGoogleFailed">Connection to Google Sign In failed</string>
    <string name="cantGetAuthresult">Cant get auth result</string>
    <string name="savingPhoto">Saving photo</string>
    <string name="photoSavedSuccessfully">Photo saved successfully</string>
    <string name="imageSaved">Image saved</string>
    <string name="fillAllTheFields">Fill all the fields</string>
    <string name="passwordsAreNotSame">Passwords are not the same</string>
    <string name="passwordTooShortMustBe8AtLeast">Password too short, must be 8 at least</string>
    <string name="writeYourEmailCorrectly">Write your email correctly</string>
    <string name="creatingAccount">Creating account</string>
    <string name="youAreAuthenticatedSuccessfully">You are authenticated successfully</string>
    <string name="settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="addRecipe">Add recipe</string>
    <string name="addSteps">Add steps</string>
</resources>
